<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:gravity="top"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:ignore="UnusedAttribute" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50sp">


        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbldestinatario"
                />

            <EditText
                android:id="@+id/txtde_para"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="8"
                android:hint="@string/lbldestinatariohint"
                android:autofillHints="@string/lbldestinatariohint"
                android:inputType="textEmailAddress"
                android:maxLength="100"></EditText>


        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblasunto" />

            <EditText
                android:id="@+id/txtde_asunto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="8"
                android:hint="@string/lblasuntohint"
                android:autofillHints="@string/lblasuntohint"
                android:inputType="textAutoCorrect"
                android:maxLength="100"></EditText>


        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">


            <EditText
                android:id="@+id/txtde_mensaje"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="8"
                android:gravity="left"
                android:hint="@string/lblmensajehint"
                android:autofillHints="@string/lblmensajehint"
                android:inputType="textMultiLine"
                android:lines="10"
                android:maxLength="500"
                android:maxLines="1"
                tools:ignore="RtlHardcoded"></EditText>
        </TableRow>


    </TableLayout>

</RelativeLayout>